--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/VladlenaSkubi-du/libft_42school.git
+[submodule "libft_42school"]
+	path = libft_42school
+	url = https://github.com/VladlenaSkubi-du/libft_42school.git
