update. libft don't update

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libft_42school"]
 	path = libft_42school
-	url = https://github.com/VladlenaSkubi-du/libft_42school.git
+	url = git@github.com:VladlenaSkubi-du/libft_42school.git
 [submodule "libft"]
 	path = libft
 	url = https://github.com/VladlenaSkubi-du/libft_42school.git
